# datasette-python

./: datasette_python.py  pyproject.toml
tests/: test_python.py
